# livraria_back

./: README.md  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: models.py  views.py
livraria/migrations/: 0001_initial.py  0003_autor_livro.py  0004_livro_autores.py
livraria/models/: editora.py  livro.py
livraria/serializers/: __init__.py  autor.py  editora.py  livro.py
livraria/views/: categoria.py  livro.py
