[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Amanda de Oliveira Pires", email = "nanapires255@gmail.com"},
]
dependencies = [
    "django>=4.1.7",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.2.0",
    "djangorestframework-simplejwt>=5.2.2",
    "setuptools>=68.1.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

